Fix numbered list colors and spacing

--- a/src/assets/toolkit/styles/utilities/_lists.scss
+++ b/src/assets/toolkit/styles/utilities/_lists.scss
@@ -35,7 +35,7 @@
     position: relative;
     display: block;
     counter-increment: list;
-    margin: 0 0 0.5rem 2rem;
+    margin: 0 0 1rem 2rem;
 
     &:before {
       display: inline-block;
@@ -49,8 +49,7 @@
       width: 1.5rem;
       height: 1.5rem;
       line-height: 1.5rem;
-      vertical-align: top;
-      box-shadow: inset 0 0 0 1px #333;
+      box-shadow: inset 0 0 0 1px $oil;
     }
 
     &:last-of-type {
